<resources>
    <string name="app_name">digitalSecurity</string>
    <string name="smartphone">Смартфон – это умный телефон с большим экраном и разными функциями.</string>
    <string name="whySmartphone">Он подходит для тех, кто хочет быть всегда на связи и иметь под рукой интернет, так как смартфон удобно носить с собой.</string>
    <string name="whySmartphone2">Сенсорным экраном легко управлять касанием пальца, а доступ к интернету, картам, музыке и социальным сетям делает его незаменимым помощником в жизни.</string>
    <string name="StartOn">Работа на смартфоне начинается с включения устройства. Чтобы включить/выключить телефон, нажмите на кнопку сбоку и удерживайте нажатие несколько секунд.</string>
    <string name="whenOn">При выключении, на экране появляется окно, где вы должны подтвердить действие.</string>
    <string name="whenOff">В примере выше: чтобы выключить смартфон, нужно выбрать строку «Выключение»</string>
    <string name="whenEmergency">Также можно включить «Экстренный режим» – он отключает все функции смартфона, кроме звонков. В экстренных ситуациях такой режим экономит заряд аккумулятора.</string>
    <string name="whenReboot">Также, телефон можно перезагрузить, нажав соответствующую кнопку. Иногда это нужно при зависании устройства.</string>
    <string name="VolumeButtons">Также всегда есть сдвоенная кнопка громкости (верхняя кнопка - громче, нижняя - тише)</string>
    <string name="widgets">Когда смартфон включен, отображается главный экран. Обычно он состоит из нескольких страниц, которые нужно листать пальцем вправо или влево. </string>
    <string name="anotherWidgets"> На главный экран выводятся основные значки пиложений. Еще здесь могут отображаться время, дата, погода и т.д. Это маленькие программы-виджеты. Вы сами можете установить их на видное место в смартфоне.</string>
    <string name="operationSystems">Операционная система – это основная программа, которая запускает основные функции: звонок, выход в интернет, создание фото и другие. </string>
    <string name="operationSystemsTwo">Операционные системы постоянно обновляются – часто это происходит автоматически, и смартфон предупреждает вас об этом.</string>
    <string name="dontWorry">Не пугайтесь! Просто разрешите установить обновление, иначе приложения могут работать некорректно.</string>
    <string name="singsAbove"> В самом верху экрана справа и слева виднеется целый ряд символов. Их набор может меняться, но нужно ориентироваться в основных обозначениях </string>
    <string name="alarm"> – будильник, если его завели (иначе значок не отобразится) </string>
    <string name="soundOff"> – включенный беззвучный режим </string>
    <string name="exampleSignsAbove"> На примере выше справа вверху отображаются: </string>
    <string name="wifi"> – значок соединения с беспроводным интернетом - Wi-Fi </string>
    <string name="battery"> – уровень заряда аккумулятора </string>
    <string name="net"> – уровень сигнала сети (чем больше палочек, тем лучше работает связь) </string>
    <string name="signsAboveLeft"> Слева вверху могут отображаться:</string>
    <string name="time"> – время </string>
    <string name="search"> – значок поисковой системы </string>
    <string name="netOperator"> – оператор сети, к которой подключена сим-карта </string>
    <string name="whatElseAbove"> Также вверху слева могут отображаться уведомления от операционной системы (например, о необходимости обновления, о состоянии безопасности), от различных программ и приложений. </string>
    <string name="whatToDoNotice"> Чтобы посмотреть подробности уведомлений и попасть к быстрому меню, проведите пальцем от самой верхней части экрана до его середины (такое действие часто называют свайпом). </string>
    <string name="notificationsUp"> После свайпа вы увидите уведомления и настройки быстрого действия. Чтобы включить те или иные функции, достаточно просто коснуться пальцем нужного кружка. При включении функции значок будет окрашен цветом.  </string>
    <string name="notificationsDown"> Уведомления можно убрать, смахнув строчку спава налево. </string>
    <string name="notificationsSee"> Чтобы подробнее посмотреть содержание уведомления, нужно просто коснуться его пальцем </string>
    <string name="bottomMenu"> Внизу экрана находятся кнопки управления смартфоном. Они сенсорные и присутствуют на экране абсолютно всегда. </string>
    <string name="bottomButtons"> Правая кнопка – «назад», центральная – «домой» и левая – «недавно использованные приложения». </string>
    <string name="backBtn"> Прикоснувшись к кнопке «Назад», вы вернетесь на предыдущий экран. </string>
    <string name="homeBtn"> Кнопку «Домой» используйте для возвращения на главный экран. </string>
    <string name="recentBtn"> Кнопка «Недавно использованные приложения» позволяет посмотреть список всех открытых приложений. Чтобы удалить приложение из списка недавно использованных, смахните его вверх </string>
    <string name="attacks"> Чаще всего мошенникам проще обхитрить человека, чем сложную техническую систему. Именно поэтому очень важно знать о самых распространенных схемах обмана. </string>
    <string name="socialIngeneering"> Мошеннические схемы обмана </string>
    <string name="letsAttack"> В этой главе мы разберемся в видах атак и узнаем, как от них защититься. </string>
    <string name="whatIsFishing"> При переходе на такой сайт вы попадаетесь на крючок, вводите логин, пароль, и даже данные банковских карт. Так мошенник КРАДЁТ ваши деньги и личные данные. </string>
    <string name="howtoFish"> На фишинговые сайты случайно заходят в Интернете, через письма на электронную почту, по рассылке в соцсетях. </string>
    <string name="fishing"> Фишинг - распространенный метод обмана. Главная задача мошенника заставить вас перейти на поддельный сайт, который выглядит также, как настоящий, но могут быть почти незаметные отличия.</string>
    <string name="vishing"> Вишинг - обман по телефону. </string>
    <string name="howToVishing"> Мошенник представляется,например, сотрудником банка или пенсионного фонда, и запрашивает информацию о вашей карте или просит назвать код из сообщения. </string>
    <string name="howToVishTwo"> Иногда такие мошенники представляются вашими родственниками и просят перевести деньги на операцию, ремонт машины после аварии и т.д. </string>
    <string name="vishingAlert"> Не ведитесь на это! Мошенники взломают ваши аккаунты в Интернете или украдут большие деньги! </string>
    <string name="securityRules"> Какие правила безопасности нужно соблюдать: </string>
    <string name="rule1"> Не переходите по подозрительным ссылкам, пришедшим от незнакомых адресатов. Даже если кажется, что информация пришла от известной компании. Если сомневаетесь, сделайте звонок по официальному номеру, уточните информацию! </string>
    <string name="rule2"> Не называйте никакие коды из смс или цифры с платежной карты! </string>
    <string name="rule3"> Не переводите деньги на эмоциях! Сначала уточните ситуацию и расскажите родным</string>
    <string name="rule4"> Периодически меняйте пароли в аккаунтах в Интернете </string>
    <string name="password"> Как создать надежный пароль? </string>
    <string name="passRule1"> Пароль должен состоять из 8 знаков минимум (чем больше, тем лучше) </string>
    <string name="passRule2"> В пароле должны чередоваться буквы, цифры и символы (например, %?*№.,/) </string>
    <string name="passRule3"> Должны присутствовать как строчные, так и заглавные буквы </string>
    <string name="passRule4"> Не используйте свое ФИО, дату рождения, номер паспорта и другие личные данные </string>
    <string name="passRule5"> Для каждого аккаунта должен быть свой пароль </string>
    <string name="passRule6"> Храните пароли в надежном месте </string>
    <string name="createPass"> Попробуйте придумать пароль, который будет соответствовать правилам создания надежного пароля: </string>
    <string name="Sorry"> Раздел находится в разработке. Загляните позже! </string>


</resources>