<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".lessonOneFragments.PageNineFragment"
    android:background="@color/blueBg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottomMenu"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="center"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="25sp"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_bottom_menu"
            android:layout_marginHorizontal="15sp"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/bottomButtons"
            android:layout_marginHorizontal="20sp"
            android:textAlignment="center"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12sp"
            android:backgroundTint="@color/lightGreen"
            android:layout_marginTop="20sp"
            android:layout_marginHorizontal="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginTop="15sp"
                    android:layout_marginHorizontal="15sp"
                    android:text="@string/backBtn"
                    />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginTop="15sp"
                    android:layout_marginHorizontal="15sp"
                    android:text="@string/homeBtn" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginVertical="15sp"
                    android:layout_marginHorizontal="15sp"
                    android:text="@string/recentBtn" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</FrameLayout>