<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".lessonTwoFragments.PageFiveSecondFragment"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blueBg"
            android:textSize="21sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="25sp"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="center"
            android:text="@string/password" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGreen"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="25sp"
            android:layout_marginStart="30sp">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:text="@string/passRule1" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blueBg"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="25sp"
            android:layout_marginEnd="30sp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:text="@string/passRule2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGreen"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="25sp"
            android:layout_marginStart="30sp">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:text="@string/passRule3" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blueBg"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="25sp"
            android:layout_marginEnd="30sp">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:text="@string/passRule4" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGreen"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="25sp"
            android:layout_marginStart="30sp">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:text="@string/passRule5" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blueBg"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="25sp"
            android:layout_marginEnd="30sp">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:text="@string/passRule6" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</FrameLayout>