<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lessonOneFragments.PageTwoFragment"
    android:background="@color/blueBg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/whenOnTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/whenOn"
                android:layout_marginTop="40sp"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginHorizontal="15sp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="153dp"
                android:layout_height="310dp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="15sp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_turnoff_options" />
        </LinearLayout>


        <TextView
            android:id="@+id/whenOffTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="20sp"
            android:text="@string/whenOff"
            android:textColor="@color/white"
            android:layout_marginHorizontal="15sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="15sp"
            android:layout_marginStart="30sp"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/whenRebootTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:text="@string/whenReboot"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="15sp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/whenEmergencyTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:textSize="20sp"
            android:text="@string/whenEmergency"
            android:layout_marginTop="15sp"
            android:layout_marginHorizontal="15sp"/>

    </LinearLayout>

</FrameLayout>