<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".lessonTwoFragments.PageFourSecondFragment"
    android:background="@color/blueBg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="25sp"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="center"
            android:text="@string/securityRules" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="25sp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:textAlignment="center"
                android:text="@string/rule1" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGreen"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="15sp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:textAlignment="center"
                android:text="@string/rule2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="15sp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:textAlignment="center"
                android:text="@string/rule3" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGreen"
            app:cardCornerRadius="12sp"
            android:layout_marginTop="15sp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="19sp"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="10sp"
                android:textAlignment="center"
                android:text="@string/rule4" />
        </androidx.cardview.widget.CardView>




    </LinearLayout>
</FrameLayout>