<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".lessonTwoFragments.PageOneSecondFragment"
    android:background="@color/blueBg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="center"
            android:layout_marginTop="110sp"
            android:layout_marginHorizontal="5sp"
            android:text="@string/socialIngeneering" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            app:cardCornerRadius="15sp"
            android:layout_marginHorizontal="15sp"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="21sp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginVertical="15sp"
                android:layout_marginHorizontal="10sp"
                android:text="@string/attacks" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="center"
            android:layout_marginTop="30sp"
            android:text="@string/letsAttack" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:src="@drawable/ic_fraud" />


    </LinearLayout>
</FrameLayout>