<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".lessonTwoFragments.PageTwoSecondFragment"
    android:background="@color/blueBg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fishindTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/fishing" />

        <ImageView
            android:id="@+id/fishingImage"
            android:layout_width="395dp"
            android:layout_height="228dp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_fishing" />

        <TextView
            android:id="@+id/whereFishingTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="5sp"
            android:text="@string/howtoFish" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="10sp"
            android:backgroundTint="@color/lightRed">

            <TextView
                android:id="@+id/afterFishingTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginVertical="10sp"
                android:layout_marginHorizontal="5sp"

                android:text="@string/whatIsFishing" />
        </androidx.cardview.widget.CardView>




    </LinearLayout>

</FrameLayout>